﻿= Release 1.8.6.0 =
Released: Unreleased

== Features ==
 * Revision Graph: Can generate output graph file through command line

== Bug Fixes ==
 * Fixed issue #1859: Log too long when using Switch to New Branch option in Create Branch dialog
 * Fixed issue #1864: Commit button did not work after revert
 * Fixed issue #1862: Some labels not wide enough for translations to fit in
 * Fixed issue #1790: "Clean up" window position is not preserved on multi-monitor setup
 * Fixed issue #1876: Up/down buttons in Rebase dialog desynchronise the bottom view
 * Fixed issue #1875: Commit selection is lost with focus in Rebase dialog
 * Fixed issue #1873: Squash doesn't preserve original author date
 * Fixed issue #1863: never-ending wait due to lost messages
 * Fixed issue #1883: Option Buttons in Hook script not wide enough

= Release 1.8.5.0 =
Released: 2013-08-18

== Features ==
 * Fixed issue #1831: Allow Origin Remote Renaming on Clone
 * Fixed issue #1839: Conflict dialog does not allow resolving multiple or all conflicts with the same option
 * Allow to send (patch)mails over relay servers (e.g. the one from your ISP)
 * When adding second and more remotes, prompt user to disable tag fetching to avoid fetching wrong tags
 * Fixed issue #1845: Add "pull" button on "git switch" window
 * Fixed issue #1848: TortoiseGitBlame doesn't scroll to the previously selected line on "Blame previous revision"
 * Underline git hash in log message view and jump to that commit when clicking on the hash
 * Fixed issue #1829: You have not concluded your merge (MERGE_HEAD exists) - allow to abort merge more easily.
 * Commit Dialog: Add "Pick commit hash" in message text box context menu
 * Can set log graph line width and node size
 * Updated shipped PuTTY PLink to version 0.63 (which contains some securiuty fixes)
 * Fixed issue #1746: Pressing "Delete" on keyboard should delete selected non versioned file in commit dialog
 * Sync Dialog: Add stash menu button