@@ -307,7 +307,8 @@ public:
 	bool IsSelectionContinuous();
 	int  BeginFetchLog();
 	int  FillGitLog(CTGitPath *path, CString *range = NULL, int infomask = CGit::LOG_INFO_STAT| CGit::LOG_INFO_FILESTATE | CGit::LOG_INFO_SHOW_MERGEDFILE);
-	BOOL IsMatchFilter(bool bRegex, GitRev *pRev, std::tr1::wregex &pat);
+	std::vector<int> OrderFilter();
+	BOOL IsMatchFilter(bool bRegex, GitRev *pRev, std::tr1::wregex &pat, std::vector<int> &filters);
 
 	CFindDlg *m_pFindDialog;
 	static const UINT	m_FindDialogMessage;
